# TLDW

./: README.md  install.sh  pyproject.toml
.claude/: ralph-loop.local.md
extension/: build.js  package-lock.json  package.json  tsconfig.json
extension/public/: manifest.json  options.html  popup.html  rules.json
extension/src/: background.ts  config.ts  llm.ts  options.ts  popup.ts  transcript.ts
extension/test/: context-menu.test.mjs  integration.test.mjs  unit.test.mjs
tests/: test_config.py  test_integration.py  test_llm.py  test_transcript.py
tldw/: __init__.py  __main__.py  cli.py  config.py  display.py  llm.py  transcript.py
